--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,29 @@
-.btn{
+/* .btn{
   height: 30px;
   width: 30px;
   border-radius: 50%;
   border:0px solid red;
-}
+} */
+.example_a {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #ed3330;
+  padding: 20px;
+  border-radius: 50%;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+  /* background: linear-gradient(to right, #67b26b, #4ca2cb) !important; */
+  height: 30px;
+  width: 30px;
+  }
+
+  .example_a:hover {
+    background: #434343;
+    letter-spacing: 1px;
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+    }
